 - lt:improve handling of seed flag in PEX messages
 - lt:fix issue of accruing unlimited DHT node candidates when DHT is disabled
 - lt:fix bug in parsing chunked encoding
 - lt:fix incorrect reporting of active_duration when entering graceful-pause
 - com.google.gms:google-services:4.3.10
 - com.google.firebase:firebase-crashlytics-gradle:2.7.1
 - com.google.android.flexbox:flexbox:3.0.0
 - com.unity3d.ads:unity-ads:3.7.5
 - com.mopub.mediation:unityads:3.7.5.0
 - com.applovin:applovin-sdk:10.3.2
 - com.mopub.mediation:applovin:10.3.2.0
 - com.google.android.material:material:1.4.0
 - androidx.exifinterface:exifinterface:1.3.3
 - androidx.appcompat:appcompat:1.3.1
 - androidx.recyclerview:recyclerview:1.2.1
 - androidx.core:core-ktx:1.6.0
 - com.google.android.gms:play-services-ads:20.2.0
 - com.android.billingclient:billing:4.0.0
 - com.google.android.gms:play-services-ads:20.3.0
 - com.google.code.gson:gson:2.8.8
 - com.google.re2j:re2j:1.6

FrostWire 2.3.2 build 679 (experimental/very unstable) - JUN/18/2021
 - We're submitting this to Google Play so they don't remove the app but it's broken
 - Android 11 - first pass of compatibility fixes
 - FrostWire no longer needs writes access to external storage
 - FrostWire writes only to its internal directory and make downloaded files
 - Multiple fixes related to media player startup which could cause
   the player to enter illegal states or crash the application
 - For Android 10+ devices, we'll temporarily disable storage selection from settings
   until we make sure we can integrate it for Android 10+ devices
   without external writing permissions
 - File deletion action not available for external media files not downloaded by FrostWire
 - remove ignoreHardwareMenu logic, physical menu key a thing of the past
 - minSdkVersion 23 (Android Marshmallow 6.0)
 - targetSdkVersion 30 (Android 11)
 - com.google.gms:google-services:4.3.8
 - com.google.firebase:firebase-crashlytics-gradle:2.7.0
