@@ -19,10 +19,11 @@ FrostWire 2.4.0 build 681 - AUG/26/2021
  - com.google.gms:google-services:4.3.10
  - com.google.firebase:firebase-crashlytics-gradle:2.7.1
  - com.google.android.flexbox:flexbox:3.0.0
- - com.unity3d.ads:unity-ads:3.7.5
+ - com.mopub:mopub-sdk:5.18.0
  - com.mopub.mediation:unityads:3.7.5.0
- - com.applovin:applovin-sdk:10.3.2
  - com.mopub.mediation:applovin:10.3.2.0
+ - com.unity3d.ads:unity-ads:3.7.5
+ - com.applovin:applovin-sdk:10.3.2
  - com.google.android.material:material:1.4.0
  - androidx.exifinterface:exifinterface:1.3.3
  - androidx.appcompat:appcompat:1.3.1
